* Mon Jul 20 2020 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.16-1

* Thu Apr 30 2020 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.14-1
- Integration into the jupyter notebooks:
  - add the magic command for ELogin: %elogin
  - Add the draft implementation of the erun magic command
- Add the possibility to run a standalone command with %erun
  - if a command is passed the environment stays untouched
  - otherwise the new environment is imported like before
- fixup of the explicit python in the shebang mangling.

* Wed Apr 8 2020 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.12.1-1
- update to the latest make and cmake library of Elements (5.10.1)

* Tue Apr 7 2020 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.12-1
- update to the latest make and cmake library of Elements (5.10)
- various fixes for the python3 (explicit version) and python (implicit) 
  version 3 series
- Modify EuclidWrapper to accept extra config files (Alejandro Alvarez Ayllon).
- Fix the localisation of the lsb_release utility
- Use relative import to avoid messing around with the PYTHONPATH
- Replace distutils by setuptools (Frédéric Leroux)

* Fri Apr 12 2019 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.10-1
- update to the latest make and cmake library of Elements (5.6)

* Thu Oct 11 2018 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.8.2-1
- data/RPM/EuclidEnv.spec.in: fix the spec generation if the python explicit
  version is empty. The RPM post install script were failing in that case 
- python/EuclidWrapper/logging.py: fix the absolute import of the system
  logging feature. The EuclidWrapper script was working fine with python3 but 
  not with the default system python (python 2) 

* Thu Aug 23 2018 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.8.1-1
- bypass of the tests in the jenkins CI. Please have look at 
  https://euclid.roe.ac.uk/issues/8257

* Mon Aug 20 2018 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.8-1