@@ -1,0 +1,9 @@
+CURRENT_MAKEFILE_LIBRARY := $(lastword $(MAKEFILE_LIST))
+
+$(info Using the $(CURRENT_MAKEFILE_LIBRARY) make library)
+
+TOP_MAKEFILE_PATH := $(abspath $(firstword $(MAKEFILE_LIST)))
+PROJECT_SOURCE_PATH := $(dir $(TOP_MAKEFILE_PATH))
+TOP_CMAKELISTS_PATH := $(PROJECT_SOURCE_PATH)CMakeLists.txt
+PROJECT_BUILD_PATH := $(BUILDDIR)
+PROJECT_INSTALLAREA_PATH := $(PROJECT_SOURCE_PATH)InstallArea/$(BINARY_TAG)
